# PYNQZ2-CNN

./: .gitignore  README.md  conversionHls4ml.py  hls4ml.rar  hls4mlVivadoacelerator.py  modeloentrenamiento.py  plot_iq.py  plot_waveforms.py  pyproject.toml  redneuoronal_optima.py
