[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = ""
authors = ["RodrigoGarciaLeon <rodrigarl46@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
matplotlib = "^3.10.8"
numpy = "^2.4.0"
scipy = "^1.16.3"
plotly = "^6.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
